fixed large text styling problem and some spacing issues

--- a/app/styles/page.module.css
+++ b/app/styles/page.module.css
@@ -27,12 +27,12 @@
 
 .profilename{
   
-  font-size: clamp(20px, 5vw, 50px);
+  font-size: clamp(20px, 5vw, 30px);
   color:yellow;
 }
 
 .profiledesc{
-  font-size:clamp(15px, 3vw, 35px);
+  font-size:clamp(15px, 3vw, 20px);
   color:white;
 }
 
@@ -55,13 +55,15 @@
 }
 
 .sectionheader{
-  font-size:clamp(15px, 3vw, 35px);
+  font-size:clamp(15px, 3vw, 25px);
   color:white;
   margin:0 2vw;
 }
 
 .sectiontext{
-  font-size:clamp(12px, 2vw, 30px);
+  margin:0 3vw;
+  padding: 0 5vw;
+  font-size:clamp(12px, 2vw, 15px);
   color:white;
   margin:0 1vw;
 }
@@ -104,6 +106,7 @@
 }
 
 .portfoliocontainer{
+  margin:2vw 0;
   display:flex;
   flex-wrap: wrap;
   justify-content: space-around;
